--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <nav class="nk-navbar nk-navbar-top nk-navbar-sticky nk-navbar-transparent nk-navbar-white-text-on-top">
             <div class="container">
                 <div class="nk-nav-table">
-                    <a href="home.html" class="nk-nav-logo">
+                    <a href="index.html" class="nk-nav-logo">
                         <img src="assets/images/logo-light-SVG-dajiffy.svg" alt="" width="85" class="nk-nav-logo-onscroll">
                         <img src="assets/images/logoSVG-dajiffy.svg" alt="" width="85">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                         <li>
-                            <a href="login.html">Login</a>
+                            <a href="Login.php">Login</a>
                         </li>
                     </ul>
 
@@ -206,10 +206,78 @@
                                 <input type="text" class="form-control required" name="lastname" placeholder="Last Name">
                             </div>
                             <div class='col-sm-6'>
-                                <input type="text" class="form-control required" name="birthday" placeholder="Birth Day">
+                            <label>Birth Date: </label>
+                                <select name="Day" value="12">
+                                    <option value = "" disabled="disabled" selected="selected" hidden="hidden">Day</option>
+                                    <option value = "1">1</option>
+                                    <option value = "2">2</option>
+                                    <option value = "3">3</option>
+                                    <option value = "4">4</option>
+                                    <option value = "5">5</option>
+                                    <option value = "6">6</option>
+                                    <option value = "7">7</option>
+                                    <option value = "8">8</option>
+                                    <option value = "9">9</option>
+                                    <option value = "10">10</option>
+                                    <option value = "11">11</option>
+                                    <option value = "12">12</option>
+                                    <option value = "13">13</option>
+                                    <option value = "14">14</option>
+                                    <option value = "15">15</option>
+                                    <option value = "16">16</option>
+                                    <option value = "17">17</option>
+                                    <option value = "18">18</option>
+                                    <option value = "19">19</option>
+                                    <option value = "20">20</option>
+                                    <option value = "21">21</option>
+                                    <option value = "22">22</option>
+                                    <option value = "23">23</option>
+                                    <option value = "24">24</option>
+                                    <option value = "25">25</option>
+                                    <option value = "26">26</option>
+                                    <option value = "27">27</option>
+                                    <option value = "28">28</option>
+                                    <option value = "29">29</option>
+                                    <option value = "30">30</option>
+                                    <option value = "31">31</option>
+                                </select>
+                                
+                                 <select name="Month" value="02">
+                                    <option value = "" disabled="disabled" selected="selected" hidden="hidden">Month</option>
+                                    <option value = "01">January</option>
+                                    <option value = "02">February</option>
+                                    <option value = "03">March</option>
+                                    <option value = "04">April</option>
+                                    <option value = "05">May</option>
+                                    <option value = "06">June</option>
+                                    <option value = "07">July</option>
+                                    <option value = "08">August</option>
+                                    <option value = "09">September</option>
+                                    <option value = "10">October</option>
+                                    <option value = "11">November</option>
+                                    <option value = "12">Dicember</option>
+                                </select>
+
+                                <select name="Year" value="02">
+                                    <option value = "" disabled="disabled" selected="selected" hidden="hidden">Year</option>
+                                    <option value = "2006">2006</option>
+                                    <option value = "2005">2005</option>
+                                    <option value = "2004">2004</option>
+                                    <option value = "2003">2003</option>
+                                    <option value = "2002">2002</option>
+                                    <option value = "2001">2001</option>
+                                    <option value = "2000">2000</option>
+                                    <option value = "1999">1999</option>
+                                    <option value = "1998">1998</option>
+                                    <option value = "1997">1997</option>
+                                    <option value = "1996">1996</option>
+                                    <option value = "1995">1995</option>
+                                </select>
                             </div>
                             <div class="col-md-6">
-                                <input type="text" class="form-control required" name="gender" placeholder="Sex: M/F">
+                                  <label>Gender:</label>
+                                  <input type="radio" name="gender" value="Male" checked> Male
+                                  <input type="radio" name="gender" value="Female" style=""> Female<br>
                             </div>
                         </div>
                         <div class="nk-gap-1"></div>
@@ -226,7 +294,7 @@
                         <div class="nk-gap-1"></div>
                         <div class="nk-form-response-success"></div>
                         <div class="nk-form-response-error"></div>
-                        <button class="nk-btn">Sing up</button>
+                        <button class="nk-btn" style="position: relative; left: 500px;">Sign up</button>
                     </form>
                     <!-- END: Form -->
                 </div>
